Closed
Bug 1675906
Opened 5 years ago
Closed 5 years ago
Add more crashes when we don't find a Factory.
Categories
(Core :: Graphics: Text, defect)
Core
Graphics: Text
Tracking
()
RESOLVED
FIXED
84 Branch
| Tracking | Status | |
|---|---|---|
| firefox84 | --- | fixed |
People
(Reporter: jrmuizel, Assigned: jrmuizel)
Details
Attachments
(1 file)
Unlikely, but we might as well keep narrowing this down.
| Assignee | ||
Comment 1•5 years ago
|
||
Unlikely, but we might as well keep narrowing this down.
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4bdd82a535bc
Add more crashes when we don't find a Factory. r=jfkthame
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•