Bug 1675906 - Add more crashes when we don't find a Factory. r=jfkthame

Unlikely, but we might as well keep narrowing this down.

Differential Revision: https://phabricator.services.mozilla.com/D96303